R scripts and updates to notebook

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,12 @@ __pycache__
 plots
 
 # Unwanted files
-.cache
+**/.RData
+**/.Rhistory
+**/.cache
+**/todo.txt
 *test*
 
 # Secrets
-.env
+**/.env
 
